openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mga-soap-calculator
  labels:
    app.kubernetes.io/managed-by: kubectl
